--- a/vpn/tasks/docker-install.yml
+++ b/vpn/tasks/docker-install.yml
@@ -1,23 +1,27 @@
 - name: Add Docker GPG key
   apt_key: url=https://download.docker.com/linux/ubuntu/gpg
+  tags: docker-install
 
 - name: Add Docker APT repository
   apt_repository:
     repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ansible_distribution_release}} stable
+  tags: docker-install
 
 - name: Install list of packages
+  tags: docker-install
   apt:
-    name: "{{ item }}"
     state: present
-    update_cache: yes
-  with_items:
+    name:
       - apt-transport-https
       - ca-certificates
       - curl
       - software-properties-common
       - docker-ce
+      - docker-compose
+      - git
 
 - name: Load the IPsec af_key kernel module
   modprobe:
     name: af_key
     state: present
+  tags: docker-install
